Changed up divs

--- a/Home.html
+++ b/Home.html
@@ -44,7 +44,8 @@
         <div class="gridi">Thursday: 3pm-12pm</div>
         <div class="gridi">Friday: 3pm-12pm</div>
         <div class="gridi">Saturday: 1pm-8pm</div>
-        <div class="gridi">Sunday: closed</div>
+        <div class="gridi">Sunday: closed<div>
+        </div>
 
 
 
