Added extra page

--- a/Menu.html
+++ b/Menu.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="Menu.css">
 </head>
 <body>
-    
+
+    <div class="flex">
+    <footer>
+        <p>Text here
+        <a href="Menu.html">Menu</a></p>
+    </footer>
+
+    <na>
+        <a href="Home.html">Menu</a>
+    </na>
+
+    <h1>Menu</h1>
+</div>
     
 </body>
 </html>
