--- a/Home.html
+++ b/Home.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="Home.css">
 </head>
 <body>
+    <div class="sticky">
+        <h1>Bonjour Argent</h1>
+    <footer>
+        <a href="Menu.html">Menu</a>
+    </footer>
+    
+    <nav>
+           <a href="contact.html">Contact</a>
+    </nav>
+    </div>
+
+
 
     <div class="flex">
     <img src="https://www.thecalendargroup.com/media/personal-chef-440x333.jpg" alt="Image of food" width="600px">
