--- a/Menu.html
+++ b/Menu.html
@@ -22,12 +22,12 @@
 
     <div class="border">
         <p>Menu</p>
-    <h1>Dinning + Snacks</h1>
-    <p>*Only subsutitable items for courses on menu. All tables get one free appetizier(The appetizier is the bread, must pay for it afterwards).* </p>
+    <h1>Dining + Snacks</h1>
+    <p>*Only substitutable items for courses on menu. All tables get one free appetizier(The appetizier is the bread, must pay for it afterwards).* </p>
     </div>
     <br>
 
-    <p>✧.*</p>
+    <p>— ˗ˋ ୨୧ ˊ˗ —</p>
 
     <div class="border">
     <h1>Appetiziers</h1>
@@ -119,7 +119,7 @@
 <div class="flexbox">
     <ul>
         <li>BLANC DE BLANC</li>
-        <li>Lux PINOT NOIR</li>
+        <li>LUX PINOT NOIR</li>
         <li>SPARKINGLY ROSE</li>
         <li>PETITE SIRAH</li>
     </ul>
