--- a/Home.html
+++ b/Home.html
@@ -28,16 +28,16 @@
 
 <div class="border">
     <h1 >Bonjout Argent</h1>
-    <p>Fine Dining & Wineary</p>
+    <p>Fine Dining & Winery</p>
     <p>Open since 1989</p>
 
 
 <br>
 <br>
     <h1>Our History</h1>
-    <p id="story">Our beloved resturant has been open since 1989 when our Great-Great Grandfather first built this small shop in the woods in! The store has been passed down for generations with the same recipe being used since 1989! We keep thing authentic and spotless in our quaint resturant!
+    <p id="story">Our beloved resturant has been open since 1989 when our Great-Great Grandfather first built this small shop in the woods! The store has been passed down for generations with the same recipe being used since 1989! We keep things authentic and spotless in our quaint restaurant!
 
-        We like our cliental full but our pockets fuller! The items may be over price but the food is nothing to  scoff to at! Please give our little taste of France a try! </p>
+        We like our clientele full but our pockets fuller! The items may be over price but the food is nothing to scoff at! Please give our little taste of France a try! </p>
         <br>
 
         <div class="center">
@@ -47,7 +47,7 @@
 
 
 <br>
-    <p>If intrested in a reservation, please fill out the following boxes.</p>
+    <p>If interested in a reservation, please fill out the following boxes.</p>
     <p>Max number of people and tables: 10</p>
     <br>
 
@@ -81,11 +81,11 @@
         <div class="gridi">Sunday: closed </div>
         <br>
 
-        <p>HERE FOR CURRENTLY AVALIABLE TABLES</p>
+        <p>HERE FOR CURRENTLY AVAILABLE TABLES</p>
         <table class="table">
             <thead>
                 <tr>
-                    <th colspan="2">Current avaliable: This week
+                    <th colspan="2">Current available: This week
                     </th>
                 </tr>
             </thead>
@@ -134,7 +134,7 @@
 
         <h1>Menu</h1>
 
-        <p>Unsure if our fine dining establishment is meant for you? Our menu is packed to the bring with delious french food for all to enjoy! Except for kids and pets. Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae animi odit alias a delectus. Amet sunt itaque vel officiis dicta libero facilis delectus voluptate inventore, nam commodi explicabo, obcaecati odio!</p>
+        <p>Unsure if our fine dining establishment is meant for you? Our menu is packed to the brim with delicious french food for all to enjoy! Except for kids and pets. Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae animi odit alias a delectus. Amet sunt itaque vel officiis dicta libero facilis delectus voluptate inventore, nam commodi explicabo, obcaecati odio!</p>
 
 
         
